# Scorpion

./: .dockerignore  .env  .env.development.local  .env.example  .gitignore  ACCURATE_COMPONENT_STATUS.md  ADVANCED_EXPLOITATION_GUIDE.md  ADVANCED_FEATURES.md  AGGRESSIVE_SCANNING.md  AI_AGENT_ENHANCED_GUIDE.md  AI_AGENT_ENHANCEMENT_COMPLETE.md  AI_COMMAND_EXECUTION.md  AI_OCP_CONVERSION_COMPLETE.md  AI_OCP_IMPLEMENTATION.md  AI_OCP_QUICK_REF.md  AI_PAYLOAD_TESTING_GUIDE.md  AI_PENTESTING_AGENT.md  AI_PENTESTING_COMPLETE.md  AI_PENTESTING_GUIDE.md  AI_PENTESTING_QUICKREF.md  AI_PENTEST_GUIDE.md  AI_PENTEST_READY.md  AI_QUICK_START.md  AI_SETUP_GUIDE.md  AI_SIMPLE_PROMPTS.md  API_CONNECTION_REPORT.md  API_KEY_SETUP.md  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  BLUE_TEAM_GUIDE.md  CHANGELOG.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLI_WEB_PARITY_REPORT.md  COMMANDS.md  COMPLETE_USER_GUIDE.md  COMPONENT_FIX_STATUS.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_REVIEW.md  COMPREHENSIVE_REVIEW_REPORT.md  (+174 more)
tools/python_scorpion/: README.md  ai_pentest_example.com_20251211_131515.json  build-linux.sh  build-windows.ps1  providers.json  pyproject.toml  runner.py
tools/python_scorpion/src/python_scorpion/: __init__.py  advanced_reporting.py  advanced_shells.py  aggressive_exploit_config.py  ai_decision_engine.py  ai_pentest.py  ai_pentest_enhanced.py  api.py  api_security.py  baseline_diff.py  bruteforce.py  ci_integration.py  cli.py  cloud.py  code_scan.py  compliance_scanner.py  container_sec.py  control_validation.py  crawler.py  credential_harvesting.py  db_pentest.py  decoy_scanner.py  dirbuster.py  evasion.py  (+31 more)
tools/python_scorpion/src/python_scorpion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+144 files in other folders)
