[project]
name = "python-scorpion"
version = "2.0.2"
description = "Scorpion security toolkit (Python heavy-weight variant)"
readme = "README.md"
authors = [{ name = "Scorpion Team" }]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "aiohttp>=3.9.0",
  "dnspython>=2.6.1",
  "cryptography>=43.0.0",
  "python-dotenv>=1.0.0",
  "uvloop>=0.20.0; platform_system != 'Windows'",
  "pyjwt>=2.8.0",
]

[project.optional-dependencies]
advanced = [
  "scapy>=2.5.0",
]

codescan = [
  "bandit>=1.7.8",
  "checkov>=3.0.0",
  "pip-audit>=2.7.3",
  "semgrep>=1.90.0",
]

[project.scripts]
scorpion = "python_scorpion.cli:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
